[FIX] Autocomplete text needed more contrast in darkroom and abse.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@28747 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/darkroom.css
+++ b/styles/darkroom.css
@@ -814,6 +814,15 @@ a.tikihelp:hover {
 	color: orange;
 }
 
+/** Jquery autocomplete **/
+.ac_even, .ac_odd {
+	color: #292929;
+}
+
+.ac_over {
+	color: white;
+}
+
 /**** Boxes *****/
 /** Modules **/
 
